Removed the second part of the lab