@@ -94,34 +94,6 @@ Solution:
 ▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒ ▒▒ ▒▒▒▒▒▒ ▒▒▒▒ ▒▒▒▒▒▒, ▒▒ ▒▒▒▒▒ ▒▒▒'▒ ▒▒▒▒▒ ▒▒▒▒▒▒▒▒▒ ▒▒▒▒▒▒▒.
 
 </details>
-
-# Legacy programs and bad behavior
-
-* Not all programs are aware of the limits enforced by c-groups
-* A program trying to allocate more memory than allowed will be terminated
-* Check [java-docker-cgroups/entrypoint.sh](https://github.com/ciberado/java-docker-cgroups/blob/master/entrypoint.sh) to see how a relatively old version of the JVM can be started with or without `c-groups` options
-
-```bash
-#!/bin/sh
-test "$1" = "-x" && {
-	echo "Enable experimental vm options"
-	export JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:+UseG1GC"
-}
-java $JAVA_OPTS Main
-```
-
-* Run a pod without those options and take note of the output
-
-```bash
-kubectl run j1 --image=ciberado/java-docker-cgroups --limits=memory=100Mi -it --restart=Never
-```
-
-* Run the same image again but including the `-x` option to activate the c-groups awareness and compare both outputs (Killed vs `java.lang.OutOfMemoryError`)
-
-```bash
-kubectl run j2 --image=ciberado/java-docker-cgroups --limits=memory=100Mi -it --restart=Never -- -x
-```
-  
 ## Extra ball
 
 * In an small cluster it is possible to get information about the node utilization using bash magic
